resources/aws-sample-app/app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: aks-helloworld-two
spec:
  replicas: 1
  selector:
    matchLabels:
      app: aks-helloworld-two
  template:
    metadata:
      labels:
        app: aks-helloworld-two
    spec:
      containers:
      - name: aks-helloworld-two
        image: dsopublic.azurecr.io/launch-api:latest
        ports:
        - containerPort: 8080
      imagePullSecrets:
      - name: docker-secret
