resources/aws-sample-app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: aks-helloworld-two
  namespace: default
spec:
  type: ClusterIP
  ports:
  - port: 80
    name: http
    targetPort: 8080
  selector:
    app: aks-helloworld-two
